--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -10,70 +10,133 @@ env:
   DOCKER_REGISTRY: docker.io
   DOCKER_USERNAME: rashidov2005
   IMAGE_NAME: foodapi
+  DOCKER_CONTEXT: ./foodapi
+  DOCKERFILE_PATH: ./foodapi/Dockerfile
 
 jobs:
-  build-and-push:
+  test:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
       
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-          
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./foodapi
-        file: ./foodapi/Dockerfile
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      - name: Restore dependencies
+        run: dotnet restore foodapi/FoodApi/FoodApi.csproj
+      
+      - name: Build
+        run: dotnet build foodapi/FoodApi/FoodApi.csproj --configuration Release --no-restore
+      
+      - name: Test
+        run: dotnet test foodapi/FoodApi/FoodApi.csproj --no-restore --verbosity normal || echo "No tests found"
+
+  build-and-push:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    outputs:
+      image-tag: ${{ steps.meta.outputs.tags }}
+      short-sha: ${{ steps.short-sha.outputs.sha }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Get short SHA
+        id: short-sha
+        run: echo "sha=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract Docker metadata (tags, labels)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=short,prefix=
+            type=ref,event=branch
+            type=ref,event=pr
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: ${{ env.DOCKER_CONTEXT }}
+          file: ${{ env.DOCKERFILE_PATH }}
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy-to-argocd:
     needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout current repo
+        uses: actions/checkout@v4
+        with:
+          path: main-repo
+      
+      - name: Update Helm values in current repo
+        run: |
+          cd main-repo
+          SHORT_SHA="${{ needs.build-and-push.outputs.short-sha }}"
+          FILE="foodapi-chart/values.yaml"
+          
+          if [ ! -f "$FILE" ]; then
+            echo "ERROR: $FILE not found"
+            exit 1
+          fi
+          
+          # Update image tag
+          sed -i "s|tag: .*|tag: \"${SHORT_SHA}\"|g" "$FILE"
+          
+          echo "Updated image tag to ${SHORT_SHA}"
+          cat "$FILE" | grep -A 3 "image:"
+      
+      - name: Commit and push to main repo
+        run: |
+          cd main-repo
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          
+          git add foodapi-chart/values.yaml
+          git diff --staged --quiet || git commit -m "chore: update image tag to ${{ needs.build-and-push.outputs.short-sha }}"
+          git push || echo "No changes to push"
+
+  deploy-with-kubectl:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
-    - name: Checkout GitOps repo
-      uses: actions/checkout@v4
-      with:
-        repository: Shohjahon59/foodapi-gitops
-        token: ${{ secrets.GITOPS_TOKEN }}
-        path: gitops
-        
-    - name: Update image tag in GitOps repo
-      run: |
-        cd gitops
-        # Update the image tag in values.yaml or kustomization
-        sed -i "s|tag: .*|tag: \"${{ github.sha }}\"|g" foodapi-chart/values.yaml
-        
-    - name: Commit and push changes
-      run: |
-        cd gitops
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update foodapi image to ${{ github.sha }}" || exit 0
-        git push
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Deploy notification
+        run: |
+          echo "🚀 Deployment ready!"
+          echo "Image: ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-push.outputs.short-sha }}"
+          echo ""
+          echo "To deploy manually, run:"
+          echo "helm upgrade --install foodapi ./foodapi-chart \\"
+          echo "  --set image.tag=${{ needs.build-and-push.outputs.short-sha }} \\"
+          echo "  --namespace default"
