--- a/argocd/foodapi-application.yaml
+++ b/argocd/foodapi-application.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/Shohjahon59/foodapi-gitops
+    repoURL: https://github.com/Shohjahon59/DevOps_Shox.git
     targetRevision: HEAD
     path: foodapi-chart
     helm:
@@ -21,5 +21,14 @@ spec:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
     syncOptions:
       - CreateNamespace=true
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
