--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,10 +1,10 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline (Disabled)
+
+# Disabled due to Docker Buildx context issues
+# Using simple-ci-cd.yaml instead
 
 on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:  # Only manual trigger
 
 env:
   DOCKER_REGISTRY: docker.io
@@ -66,6 +66,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -84,17 +86,16 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ${{ env.DOCKER_CONTEXT }}
-          file: ${{ env.DOCKERFILE_PATH }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64
+      - name: Build Docker image
+        run: |
+          cd ${{ env.DOCKER_CONTEXT }}
+          docker build -t ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.short-sha.outputs.sha }} -f Dockerfile .
+          docker tag ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.short-sha.outputs.sha }} ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.short-sha.outputs.sha }}
+          docker push ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
   update-helm-values:
     needs: build-and-push
