--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,12 +35,13 @@ jobs:
           docker push ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${SHORT_SHA}
           docker push ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
-      - name: Update Helm & Commit
+      - name: Show deployment info
         run: |
           SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)
-          sed -i "s|tag: .*|tag: \"${SHORT_SHA}\"|g" foodapi-chart/values.yaml
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add foodapi-chart/values.yaml
-          git diff --staged --quiet || git commit -m "update image tag to ${SHORT_SHA}"
-          git push
+          echo "🚀 Docker image built and pushed successfully!"
+          echo "📦 Image: ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${SHORT_SHA}"
+          echo ""
+          echo "🔄 To deploy, update foodapi-chart/values.yaml:"
+          echo "   tag: \"${SHORT_SHA}\""
+          echo ""
+          echo "Or run: helm upgrade foodapi ./foodapi-chart --set image.tag=${SHORT_SHA}"
